Set up PostgreSQL service in Docker, updated backend and frontend configurations, and enhanced message handling in the chat application. Added database integration for message storage and retrieval, along with improved error handling and validation in the server code.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Copy package files first (to speed up future builds)
 COPY package*.json ./
-RUN npm install --production
+RUN npm install
 
 # Copy the rest of your app code
 COPY . .
@@ -15,4 +15,4 @@ COPY . .
 EXPOSE 3000
 
 # Start the app
-CMD ["node", "index.js"]
+CMD ["npm", "start"]
