--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,50 @@
 services:
+  postgres:
+    image: postgres:16-alpine
+    container_name: chat-postgres
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: chat_app
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
-    build: ./server
+    build:
+      context: ./server
+      dockerfile: Dockerfile
     container_name: chat-backend
     restart: always
     ports:
       - "3000:3000"
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: chat_app
+    depends_on:
+      postgres:
+        condition: service_healthy
 
   frontend:
-    build: ./client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
     container_name: chat-frontend
     restart: always
     ports:
       - "80:80"
     depends_on:
       - backend
+
+volumes:
+  postgres_data:
