--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,15 @@
   "name": "my_chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:init": "node db/init.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +18,13 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
     "express": "^5.2.1",
+    "pg": "^8.11.3",
     "socket.io": "^4.8.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.24.0"
   }
 }
