Refactor Docker and server configurations for improved reliability and initialization. Updated PostgreSQL service settings, added a database initialization service, enhanced health checks, and implemented a startup script in the backend. Improved error handling and connection management in the server code, including environment variable validation and graceful shutdown procedures.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,30 @@ services:
   postgres:
     image: postgres:16-alpine
     container_name: chat-postgres
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: chat_app
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./server/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD-SHELL", "pg_isready -U postgres -d chat_app"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
 
-  backend:
+  db-init:
     build:
       context: ./server
       dockerfile: Dockerfile
-    container_name: chat-backend
-    restart: always
-    ports:
-      - "3000:3000"
+    container_name: chat-db-init
+    restart: "no"
     environment:
       DB_HOST: postgres
       DB_PORT: 5432
@@ -34,6 +35,35 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    command: ["npm", "run", "db:push"]
+    profiles:
+      - init
+
+  backend:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    container_name: chat-backend
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: chat_app
+    depends_on:
+      db-init:
+        condition: service_completed_successfully
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/messages", "||", "exit", "1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   frontend:
     build:
