--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,11 +58,11 @@ services:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/messages", "||", "exit", "1"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000", "||", "exit", "1"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 30s
 
   frontend:
     build:
