--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: chat_app
-    # EXPOSE means: "Visible to other containers, but NOT to the internet"
-    expose:
-      - "5432"
+    # Expose to host for local access
+    ports:
+      - "5432:5432"
     volumes:
       # The fix we confirmed works (Host Bind Mount)
       - ./pg_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -59,7 +59,7 @@ services:
     container_name: chat-nginx
     restart: always
     ports:
-      - "80:80"  # <--- The ONLY public port
+      - "80:80" # <--- The ONLY public port
     volumes:
       # Mount the config file you created
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
