--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,10 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "express": "^5.2.1",
+    "multer": "^2.0.2",
     "pg": "^8.11.3",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "drizzle-kit": "^0.24.0"
