--- a/turn-docker/turnserver.conf
+++ b/turn-docker/turnserver.conf
@@ -2,8 +2,13 @@
 listening-port=3478
 tls-listening-port=5349
 
-# Public IP of this server (replace with your server public IP)
+# Public server IP
 external-ip=77.238.120.102
+
+# Explicit bind addresses
+listening-ip=0.0.0.0
+relay-ip=77.238.120.102
+
 
 # Realm should be your domain
 realm=dock-deroom.runflare.run
