--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,24 @@
 # Stage 1: Build React
 FROM node:20-alpine AS build
 WORKDIR /app
+
+ARG VITE_SERVER_URL=
+ARG VITE_TURN_URLS=
+ARG VITE_TURN_USERNAME=
+ARG VITE_TURN_CREDENTIAL=
+
+ENV VITE_SERVER_URL=$VITE_SERVER_URL
+ENV VITE_TURN_URLS=$VITE_TURN_URLS
+ENV VITE_TURN_USERNAME=$VITE_TURN_USERNAME
+ENV VITE_TURN_CREDENTIAL=$VITE_TURN_CREDENTIAL
+
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
 RUN npm run build
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
-# If using React Router, you'll need a custom nginx.conf here
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
