--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,68 +1,141 @@
+name: blackout-chat
+
 services:
-  # --- Database (Internal Only) ---
   postgres:
     image: postgres:16-alpine
     container_name: chat-postgres
-    restart: always
+    restart: unless-stopped
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: chat_app
-    # Expose to host for local access
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-chat_app}
     volumes:
-      # The fix we confirmed works (Host Bind Mount)
-      - ./pg_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-chat_app}"]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
 
-  # --- Backend API (Internal Only) ---
+  db-init:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    container_name: chat-db-init
+    restart: "no"
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: ${POSTGRES_USER:-postgres}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      DB_NAME: ${POSTGRES_DB:-chat_app}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: npm run db:push
+
   backend:
     build:
       context: ./server
       dockerfile: Dockerfile
     container_name: chat-backend
-    restart: always
+    restart: unless-stopped
     expose:
       - "3000"
     environment:
       DB_HOST: postgres
       DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_NAME: chat_app
-      # Allow Nginx to proxy requests
-      CORS_ORIGIN: "*"
+      DB_USER: ${POSTGRES_USER:-postgres}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      DB_NAME: ${POSTGRES_DB:-chat_app}
+      JWT_SECRET: ${JWT_SECRET:-change-me-in-production}
+      CORS_ORIGIN: ${CORS_ORIGIN:-*}
+      UPLOAD_DIR: /app/uploads
+    volumes:
+      - uploads_data:/app/uploads
     depends_on:
       postgres:
         condition: service_healthy
+      db-init:
+        condition: service_completed_successfully
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS http://localhost:3000/health >/dev/null || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 10
 
-  # --- Frontend React (Internal Only) ---
   frontend:
     build:
       context: ./client
       dockerfile: Dockerfile
+      args:
+        VITE_SERVER_URL: ${VITE_SERVER_URL:-}
+        VITE_TURN_URLS: ${VITE_TURN_URLS:-}
+        VITE_TURN_USERNAME: ${VITE_TURN_USERNAME:-}
+        VITE_TURN_CREDENTIAL: ${VITE_TURN_CREDENTIAL:-}
     container_name: chat-frontend
-    restart: always
+    restart: unless-stopped
     expose:
       - "80"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      db-init:
+        condition: service_completed_successfully
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost/ >/dev/null 2>&1 || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 10
 
-  # --- NGINX (The Public Gatekeeper) ---
   nginx:
-    image: nginx:alpine
+    image: nginx:1.27-alpine
     container_name: chat-nginx
-    restart: always
+    restart: unless-stopped
     ports:
-      - "80:80" # <--- The ONLY public port
+      - "80:80"
     volumes:
-      # Mount the config file you created
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      - frontend
-      - backend
+      frontend:
+        condition: service_healthy
+      backend:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      db-init:
+        condition: service_completed_successfully
+
+  turn:
+    image: coturn/coturn:4.6.3
+    container_name: chat-turn
+    restart: unless-stopped
+    network_mode: host
+    depends_on:
+      postgres:
+        condition: service_healthy
+      db-init:
+        condition: service_completed_successfully
+    command:
+      - -n
+      - --listening-port=${TURN_PORT:-3478}
+      - --tls-listening-port=${TURN_TLS_PORT:-5349}
+      - --realm=${TURN_REALM:-localhost}
+      - --server-name=${TURN_SERVER_NAME:-localhost}
+      - --lt-cred-mech
+      - --user=${TURN_USER:-turnuser}:${TURN_PASSWORD:-turnpassword}
+      - --listening-ip=0.0.0.0
+      - --external-ip=${TURN_EXTERNAL_IP:-127.0.0.1}
+      - --min-port=${TURN_MIN_PORT:-49152}
+      - --max-port=${TURN_MAX_PORT:-65535}
+      - --fingerprint
+      - --no-cli
+      - --no-multicast-peers
+      - --no-loopback-peers
+      - --log-file=stdout
+
+volumes:
+  postgres_data:
+  uploads_data:
