--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ CORS_ORIGIN=*
 # Frontend build-time values (used by Vite during image build)
 # Example for domain/IP deployment: http://YOUR_SERVER_IP_OR_DOMAIN
 # Leave empty only if your frontend code derives this at runtime.
-VITE_SERVER_URL=https://YOUR_SERVER_IP_OR_DOMAIN
-VITE_TURN_URLS=turn:YOUR_SERVER_IP_OR_DOMAIN:3478,turns:YOUR_SERVER_IP_OR_DOMAIN:5349
+VITE_SERVER_URL=http://YOUR_SERVER_IP_OR_DOMAIN
+VITE_TURN_URLS=turn:YOUR_SERVER_IP_OR_DOMAIN:3478
 VITE_TURN_USERNAME=turnuser
 VITE_TURN_CREDENTIAL=turnpassword
 
@@ -23,5 +23,3 @@ TURN_PORT=3478
 TURN_TLS_PORT=5349
 TURN_MIN_PORT=49152
 TURN_MAX_PORT=65535
-TURN_CERT_FILE=/certs/fullchain.pem
-TURN_PKEY_FILE=/certs/privkey.pem
