--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,10 @@ JWT_SECRET=replace_with_a_long_random_secret
 CORS_ORIGIN=*
 
 # Frontend build-time values (used by Vite during image build)
-# Example for domain/IP deployment: http://YOUR_SERVER_IP_OR_DOMAIN
+# Example for domain/IP deployment: https://YOUR_SERVER_IP_OR_DOMAIN
 # Leave empty only if your frontend code derives this at runtime.
-VITE_SERVER_URL=http://YOUR_SERVER_IP_OR_DOMAIN
-VITE_TURN_URLS=turn:YOUR_SERVER_IP_OR_DOMAIN:3478
+VITE_SERVER_URL=https://YOUR_SERVER_IP_OR_DOMAIN
+VITE_TURN_URLS=turn:YOUR_SERVER_IP_OR_DOMAIN:3478,turns:YOUR_SERVER_IP_OR_DOMAIN:5349
 VITE_TURN_USERNAME=turnuser
 VITE_TURN_CREDENTIAL=turnpassword
 
@@ -23,3 +23,5 @@ TURN_PORT=3478
 TURN_TLS_PORT=5349
 TURN_MIN_PORT=49152
 TURN_MAX_PORT=65535
+TURN_CERT_FILE=/certs/fullchain.pem
+TURN_PKEY_FILE=/certs/privkey.pem
