--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,20 @@
 server {
     listen 80;
+    server_name deroom.ir;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name deroom.ir;
+
+    ssl_certificate /etc/nginx/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:10m;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+
     client_max_body_size 100M;
 
     location /socket.io/ {
